--- a/html/index.html
+++ b/html/index.html
@@ -16,8 +16,28 @@
                 <span>嵌软EASY-Create</span>
             </div>
         </div>
-        <div id="menu">
-
+        <div class="layui-side layui-bg-black" id="menu">
+            <ul class="layui-nav layui-nav-tree" >
+                <li class="layui-nav-item"><a href="#">首页</a></li>
+                <li class="layui-nav-item"><a>需求规格说明书</a></li>
+                <li class="layui-nav-item"><a>软件设计概要</a></li>
+                <li class="layui-nav-item"><a>框架搭建</a>
+                    <dl class="layui-nav-child">
+                        <dd><a>带系统</a></dd>
+                        <dd><a>不带系统</a></dd>
+                        <dd><a>芯片选择</a></dd>
+                        <dd><a>外设配置</a></dd>
+                    </dl>
+                </li>
+            </ul>
+        </div>
+        <div class="layui-body">
+            <div style="padding: 15px;">
+                主页
+            </div>
+        </div>
+        <div class="layui-footer">
+            @xiaogs.top
         </div>
     </div>
     <script type="text/javascript" src="static/layui/layui.all.js"></script>
